# microproyecto-3-cloud

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile-api  LICENSE  README.md  check_job.py  config.json  docker-compose.yml  end_to_end_test.py  makefile  mlflow.db  model_info.json  predictions_actual.jsonl  predictions_fixed.jsonl  pyproject.toml  test_api.py  test_endpoint.py
.aws/: .gitignore  ecs-task-definition-template.json  ecs-tasks-trust-policy.json
api/: Dockerfile  main.py  requirements.txt
app/: Dockerfile  api_client.py  batch_panel.py  batch_runner.py  batch_upload.py  clientGrpc.py  main.py  report_pdf.py  requirements.txt  result_table.py  streamlit_app.py  ui_components.py
deployment/api/: .dockerignore  Dockerfile  azure_ml_client.py  backend.py  blob_manager.py  models.py  requirements.txt
deployment/aws/: Dockerfile  deploy_aws.py  requirements_sagemaker.txt
deployment/azure/: .env.example  Dockerfile  conda.yml  create_realtime_endpoint.py  deploy-aci.ps1  deploy-aci.sh  deploy_api.sh  deploy_azure.py  docker-compose.yml  inference_pipeline.py  pipeline_azure.py  pyproject.toml  requirements.txt  validate_dataset.py  validate_dockerfile.py
deployment/azure/batch_inference/: __init__.py  batch_receiver.py  blob_exporter.py  config.py  inference_engine.py  logger.py  post_processor.py  requirements.txt  score.py
deployment/azure/components/: batch_inference.py  blob_exporter.py  config.py  delivery.py  evaluate_model.py  ingest_data.py  post_processor.py  preprocess_split.py  train_yolo.py  utils.py
deployment/azure/frontend/: Dockerfile  main.py  requirements.txt
deployment/azure/frontend/templates/: index.html
deployment/azure/scripts/: create_realtime_endpoint.py  deploy_aci.sh  step01_import_data.py  step02_convert_image_dir.py  step03_init_transform.py  step04_apply_transform.py  step05_split_data.py  step06_execute_script.py  step07_train_model.py  step08_score_model.py  step09_evaluate_model.py  step10_export_data.py
deployment/azure/tests/: __init__.py  test_pipeline_components.py
docs/: apptest.md  arquitectura.md  disclaimer.md  documentacion_arranque.md  documentacion_gRPC.md  documentacion_mlflow.md  evidencia_github.md  result_schema.md  tiempos_imagenes_instrucciones.md
docs/archivos_creados_analisis_tiempos/: mediciones_tiempos_cpu.csv  resumen_tiempos_cpu.json  resumen_tiempos_cpu.md
proto/: inference.proto
service/: __init__.py  inference_server.py
service/inference/: __init__.py  errors.py  inference_engine.py  mlflow_health_check.py  model_loader.py  preprocessing.py
