[project]
name = "pcb-defect-inspection"
version = "2.0.0"
description = "Sistema de Inspección de Calidad Basada en Visión Artificial para PCB - Flux Solutions Cali."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    # --- Interfaz web ---
    "streamlit>=1.45.0",
    # --- API REST (backend) ---
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.0",
    # --- Inferencia / Detección de objetos ---
    "ultralytics>=8.3.0",
    # --- Procesamiento de imágenes y datos ---
    "opencv-python-headless>=4.10.0",
    "Pillow>=11.2.1",
    "pandas>=2.2.3",
    "reportlab>=4.2.0",
    # --- Configuración ---
    "python-dotenv>=1.0.0",
    ]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
